--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
     <header class="evergreen-gradient text-white p-6 sticky top-0 z-10 shadow-lg rounded-b-2xl">
         <h1 class="text-2xl font-black tracking-tight flex justify-between items-center">
-            <span><i class="fas fa-leaf mr-2"></i>MATHGOD <span class="text-emerald-300">v2.3</span></span>
+            <span><i class="fas fa-leaf mr-2"></i>數神 <span class="text-emerald-300">v2.3</span></span>
             <button @click="generateImage" class="text-xs bg-white/20 px-3 py-1 rounded-full border border-white/30">
                 <i class="fas fa-camera mr-1"></i> 生成分享圖
             </button>
