--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>數神 MathGod</title>
+    <title>數神 MathGod v2.4</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
@@ -12,6 +12,9 @@
         .evergreen-gradient { background: linear-gradient(135deg, #059669 0%, #064e3b 100%); }
         .mode-transition { transition: background-color 0.3s, color 0.3s, border-color 0.3s; }
         [v-cloak] { display: none; }
+        /* 確保截圖區域有固定底色 */
+        .capture-bg-dark { background-color: #121212 !important; }
+        .capture-bg-light { background-color: #f9fafb !important; }
     </style>
 </head>
 <body :class="isDark ? 'bg-[#121212] text-gray-200' : 'bg-gray-50 text-gray-800'" class="min-h-screen pb-10 mode-transition">
@@ -21,10 +24,10 @@
         <div class="flex justify-between items-center mb-2">
             <h1 class="text-2xl font-black tracking-tight italic"><i class="fas fa-bolt mr-1"></i>數神 <span class="text-emerald-300 font-light text-sm not-italic">MathGod</span></h1>
             <div class="flex gap-2">
-                <button @click="isDark = !isDark" class="bg-white/20 p-2 rounded-full w-10 h-10 flex items-center justify-center border border-white/30">
+                <button @click="toggleMode" class="bg-white/20 p-2 rounded-full w-10 h-10 flex items-center justify-center border border-white/30">
                     <i :class="isDark ? 'fas fa-sun' : 'fas fa-moon'"></i>
                 </button>
-                <button @click="generateImage" class="bg-white/20 px-3 py-1 rounded-full border border-white/30 text-xs">
+                <button @click="generateImage" class="bg-white/20 px-4 py-1 rounded-full border border-white/30 text-xs font-bold">
                     <i class="fas fa-camera mr-1"></i> 分享
                 </button>
             </div>
@@ -32,25 +35,25 @@
     </header>
 
     <div class="p-4 space-y-6">
-        <section v-if="!isExporting" :class="cardClass" class="p-4 rounded-2xl mode-transition shadow-sm">
+        <section v-if="!isExporting" :class="cardClass" class="p-4 rounded-2xl mode-transition shadow-sm border">
             <h2 class="font-bold text-emerald-500 mb-3 text-xs uppercase tracking-wider">1. 加入朋友</h2>
             <div class="flex gap-2 mb-3">
-                <input v-model="newUser" @keyup.enter="addUser" type="text" placeholder="朋友名稱..." :class="inputClass" class="flex-1 p-2 rounded-xl text-sm mode-transition">
+                <input v-model="newUser" @keyup.enter="addUser" type="text" placeholder="朋友名稱..." :class="inputClass" class="flex-1 p-2 rounded-xl text-sm border mode-transition">
                 <button @click="addUser" class="bg-emerald-600 hover:bg-emerald-500 text-white px-5 rounded-xl text-sm font-bold transition-all">加入</button>
             </div>
             <div class="flex flex-wrap gap-2">
-                <span v-for="(u, i) in users" class="bg-emerald-500/10 text-emerald-500 px-3 py-1 rounded-full text-xs border border-emerald-500/20 flex items-center gap-2">
+                <span v-for="(u, i) in users" :key="i" class="bg-emerald-500/10 text-emerald-500 px-3 py-1 rounded-full text-xs border border-emerald-500/20 flex items-center gap-2">
                     {{ u }} <button @click="removeUser(i)" class="opacity-50 hover:text-red-500">×</button>
                 </span>
             </div>
         </section>
 
-        <div id="capture-zone" :class="isDark ? 'bg-[#121212]' : 'bg-gray-50'" class="space-y-6 rounded-xl p-2">
+        <div id="capture-zone" :class="isDark ? 'capture-bg-dark' : 'capture-bg-light'" class="space-y-6 rounded-xl p-2">
             
             <section v-if="expenses.length > 0" :class="isDark ? 'bg-emerald-950/20 border-emerald-900/40' : 'bg-emerald-50 border-emerald-100'" class="border p-5 rounded-3xl transition-all shadow-sm">
                 <h2 class="font-black text-emerald-600 text-sm mb-4 border-b border-emerald-500/20 pb-2 flex justify-between">
                     <span>最終結算</span>
-                    <span class="opacity-60">Total HK${{ totalSpent.toFixed(0) }}</span>
+                    <span class="opacity-60 font-normal">Total HK${{ totalSpent.toFixed(0) }}</span>
                 </h2>
                 <div class="space-y-3">
                     <div v-for="(s, i) in settlements" :key="i" :class="isDark ? 'bg-[#1a1a1a] border-slate-800' : 'bg-white border-gray-200'" class="flex items-center justify-between p-4 rounded-2xl border shadow-sm">
@@ -67,7 +70,7 @@
             <div v-if="expenses.length > 0">
                 <h3 class="font-bold text-gray-400 text-[10px] mb-3 uppercase tracking-widest ml-1">消費紀錄</h3>
                 <div class="space-y-3">
-                    <div v-for="(exp, idx) in expenses" :class="cardClass" class="p-4 rounded-2xl flex justify-between items-center border-l-4 border-emerald-600 shadow-sm mode-transition">
+                    <div v-for="(exp, idx) in expenses" :key="exp.id" :class="cardClass" class="p-4 rounded-2xl flex justify-between items-center border-l-4 border-emerald-600 shadow-sm border mode-transition">
                         <div class="text-sm">
                             <div class="font-bold">{{ exp.item }}</div>
                             <div class="text-[10px] opacity-50 mt-1">
@@ -83,18 +86,18 @@
                 </div>
             </div>
 
-            <div v-if="isExporting" class="text-center py-4 opacity-20 text-[10px] tracking-[0.5em]">POWERED BY 數神 MATHGOD</div>
+            <div v-if="isExporting" class="text-center py-4 opacity-20 text-[10px] tracking-[0.5em] font-bold">POWERED BY 數神 MATHGOD</div>
         </div>
 
-        <section v-if="!isExporting" id="input-section" :class="[cardClass, isEditing ? 'border-amber-500 ring-1 ring-amber-500' : '']" class="rounded-2xl p-4 shadow-sm mode-transition">
+        <section v-if="!isExporting" id="input-section" :class="[cardClass, isEditing ? 'border-amber-500 ring-1 ring-amber-500' : '']" class="rounded-2xl p-4 shadow-sm border mode-transition">
             <h2 class="font-bold text-gray-400 mb-4 text-[10px] uppercase flex justify-between">
                 <span>{{ isEditing ? '修改項目' : '2. 新增消費' }}</span>
-                <button v-if="isEditing" @click="cancelEdit" class="text-amber-500 underline italic">取消</button>
+                <button v-if="isEditing" @click="cancelEdit" class="text-amber-500 underline italic font-bold">取消修改</button>
             </h2>
             <div class="space-y-4">
-                <input v-model="form.item" type="text" placeholder="項目 (如：午餐)" :class="inputClass" class="w-full p-3 rounded-xl text-sm mode-transition">
+                <input v-model="form.item" type="text" placeholder="項目 (如：燒肉)" :class="inputClass" class="w-full p-3 rounded-xl text-sm border mode-transition focus:ring-2 focus:ring-emerald-500 outline-none">
                 <div class="flex gap-2">
-                    <select v-model="form.currency" @change="fetchRate" :class="inputClass" class="p-3 rounded-xl text-sm w-1/3 mode-transition">
+                    <select v-model="form.currency" @change="fetchRate" :class="inputClass" class="p-3 rounded-xl text-sm w-1/3 border mode-transition outline-none">
                         <option value="HKD">HKD</option>
                         <option value="JPY">JPY 日幣</option>
                         <option value="TWD">TWD 台幣</option>
@@ -104,26 +107,26 @@
                         <option value="USD">USD 美金</option>
                         <option value="GBP">GBP 英鎊</option>
                     </select>
-                    <input v-model.number="form.amount" type="number" placeholder="金額" :class="inputClass" class="flex-1 p-3 rounded-xl text-sm text-right mode-transition">
+                    <input v-model.number="form.amount" type="number" placeholder="金額" :class="inputClass" class="flex-1 p-3 rounded-xl text-sm text-right border mode-transition outline-none">
                 </div>
                 <div class="grid grid-cols-2 gap-4">
                     <div class="space-y-1">
                         <label class="text-[10px] opacity-50 uppercase ml-1 font-bold">誰付款</label>
-                        <select v-model="form.payer" :class="inputClass" class="w-full p-2 rounded-xl text-sm mode-transition">
-                            <option v-for="u in users" :value="u">{{ u }}</option>
+                        <select v-model="form.payer" :class="inputClass" class="w-full p-2 rounded-xl text-sm border mode-transition outline-none">
+                            <option v-for="u in users" :key="u" :value="u">{{ u }}</option>
                         </select>
                     </div>
                     <div class="space-y-1">
                         <label class="text-[10px] opacity-50 uppercase ml-1 font-bold">誰參與</label>
-                        <div :class="inputClass" class="max-h-24 overflow-y-auto rounded-xl p-2 text-[10px] mode-transition">
-                            <div v-for="u in users" class="flex items-center gap-2 mb-1">
+                        <div :class="inputClass" class="max-h-24 overflow-y-auto rounded-xl p-2 text-[10px] border mode-transition">
+                            <div v-for="u in users" :key="u" class="flex items-center gap-2 mb-1">
                                 <input type="checkbox" :value="u" v-model="form.involved" class="accent-emerald-500">
-                                <span>{{ u }}</span>
+                                <span class="truncate">{{ u }}</span>
                             </div>
                         </div>
                     </div>
                 </div>
-                <button @click="isEditing ? saveEdit() : addExpense()" :class="isEditing ? 'bg-amber-600' : 'evergreen-gradient'" class="w-full text-white font-black py-4 rounded-2xl shadow-lg active:scale-95 transition-transform">
+                <button @click="isEditing ? saveEdit() : addExpense()" :class="isEditing ? 'bg-amber-600' : 'evergreen-gradient'" class="w-full text-white font-black py-4 rounded-2xl shadow-lg active:scale-95 transition-all">
                     {{ isEditing ? '儲存修改' : '記帳 HK$' + (form.amount * currentRate).toFixed(1) }}
                 </button>
             </div>
@@ -135,10 +138,10 @@
             </button>
         </div>
 
-        <div v-if="previewImg" class="fixed inset-0 bg-black/95 z-50 flex flex-col items-center justify-center p-6">
-            <div class="bg-white text-black text-[10px] px-3 py-1 rounded-full mb-4 animate-bounce">長按圖片儲存分享</div>
-            <img :src="previewImg" class="max-w-full max-h-[75vh] rounded-lg shadow-2xl">
-            <button @click="previewImg = null" class="mt-8 text-white/50 border border-white/20 px-10 py-3 rounded-full">返回</button>
+        <div v-if="previewImg" class="fixed inset-0 bg-black/95 z-50 flex flex-col items-center justify-center p-6" @click.self="previewImg = null">
+            <div class="bg-emerald-500 text-white text-[10px] px-4 py-1 rounded-full mb-4 animate-bounce font-bold">長按圖片儲存 / 點擊背景返回</div>
+            <img :src="previewImg" class="max-w-full max-h-[75vh] rounded-lg shadow-2xl border border-white/10">
+            <button @click="previewImg = null" class="mt-8 text-white/50 border border-white/20 px-10 py-3 rounded-full hover:bg-white/10 transition-all">返回</button>
         </div>
 
     </div>
@@ -154,7 +157,7 @@ createApp({
         const isExporting = ref(false); const previewImg = ref(null);
         const form = ref({ item: "", amount: "", currency: "HKD", payer: "", involved: [] });
 
-        const cardClass = computed(() => isDark.value ? 'bg-[#1e1e1e] border-slate-800 border' : 'bg-white border-gray-100 border shadow-sm');
+        const cardClass = computed(() => isDark.value ? 'bg-[#1e1e1e] border-slate-800 text-gray-200' : 'bg-white border-gray-200 text-gray-800');
         const inputClass = computed(() => isDark.value ? 'bg-[#2d2d2d] border-slate-700 text-white' : 'bg-gray-50 border-gray-200 text-gray-800');
 
         const fetchRate = async () => {
@@ -165,6 +168,8 @@ createApp({
                 currentRate.value = data.rates.HKD || 1;
             } catch (e) { currentRate.value = 1; }
         };
+
+        const toggleMode = () => { isDark.value = !isDark.value; };
 
         const addUser = () => {
             const name = newUser.value.trim();
@@ -177,7 +182,9 @@ createApp({
         };
 
         const addExpense = () => {
-            if (!form.value.item || !form.value.amount || !form.value.payer) return;
+            if (!form.value.item || !form.value.amount || !form.value.payer || form.value.involved.length === 0) {
+                alert("請填寫完整消費資料！"); return;
+            }
             expenses.value.unshift({ id: Date.now(), ...form.value, hkd: form.value.amount * currentRate.value, involved: [...form.value.involved] });
             form.value.item = ""; form.value.amount = "";
         };
@@ -185,7 +192,8 @@ createApp({
         const startEdit = (i) => {
             isEditing.value = true; editIndex.value = i;
             form.value = { ...expenses.value[i], involved: [...expenses.value[i].involved] };
-            fetchRate(); window.scrollTo({ top: document.getElementById('input-section').offsetTop - 100, behavior: 'smooth' });
+            fetchRate();
+            window.scrollTo({ top: document.getElementById('input-section').offsetTop - 80, behavior: 'smooth' });
         };
 
         const saveEdit = () => {
@@ -196,21 +204,29 @@ createApp({
         const clearAll = () => {
             if(confirm("⚠️ 數神提示：\n確定要清除所有朋友及消費紀錄嗎？此動作無法復原。")) {
                 expenses.value = []; users.value = [];
-                localStorage.removeItem('mathgod_pro_data');
+                localStorage.removeItem('mathgod_pro_v2_data');
                 location.reload();
             }
         };
 
         const generateImage = async () => {
             isExporting.value = true;
+            // 確保 UI 更新完成
             setTimeout(async () => {
-                const canvas = await html2canvas(document.getElementById('capture-zone'), {
-                    backgroundColor: isDark.value ? '#121212' : '#f9fafb',
-                    scale: 3
-                });
-                previewImg.value = canvas.toDataURL('image/png');
+                const element = document.getElementById('capture-zone');
+                try {
+                    const canvas = await html2canvas(element, {
+                        backgroundColor: isDark.value ? '#121212' : '#f9fafb',
+                        scale: 3, // 高清
+                        useCORS: true,
+                        logging: false
+                    });
+                    previewImg.value = canvas.toDataURL('image/png');
+                } catch (err) {
+                    alert("生成圖片失敗，請再試一次。");
+                }
                 isExporting.value = false;
-            }, 200);
+            }, 300);
         };
 
         const settlements = computed(() => {
@@ -218,7 +234,7 @@ createApp({
             expenses.value.forEach(exp => {
                 balances[exp.payer] += exp.hkd;
                 const split = exp.hkd / exp.involved.length;
-                exp.involved.forEach(p => balances[p] -= split);
+                exp.involved.forEach(p => { if(balances[p] !== undefined) balances[p] -= split; });
             });
             let debtors = [], creditors = [], res = [];
             for (let u in balances) {
@@ -236,14 +252,24 @@ createApp({
         });
 
         onMounted(() => {
-            const saved = localStorage.getItem('mathgod_pro_data');
-            if (saved) { const d = JSON.parse(saved); users.value = d.users || []; expenses.value = d.expenses || []; }
+            const saved = localStorage.getItem('mathgod_pro_v2_data');
+            if (saved) { 
+                const d = JSON.parse(saved); 
+                users.value = d.users || []; 
+                expenses.value = d.expenses || []; 
+                isDark.value = d.isDark !== undefined ? d.isDark : true;
+            }
         });
+
         watch([users, expenses, isDark], () => {
-            localStorage.setItem('mathgod_pro_data', JSON.stringify({users:users.value, expenses:expenses.value, isDark:isDark.value}));
+            localStorage.setItem('mathgod_pro_v2_data', JSON.stringify({
+                users: users.value, 
+                expenses: expenses.value, 
+                isDark: isDark.value 
+            }));
         }, {deep: true});
 
-        return { isDark, users, newUser, form, expenses, currentRate, isEditing, isExporting, previewImg, cardClass, inputClass, fetchRate, addUser, addExpense, startEdit, saveEdit, cancelEdit:()=>isEditing.value=false, generateImage, clearAll, settlements, totalSpent: computed(()=>expenses.value.reduce((s,e)=>s+e.hkd,0)), removeUser: (i)=>users.value.splice(i,1), removeExpense: (i)=>expenses.value.splice(i,1) };
+        return { isDark, users, newUser, form, expenses, currentRate, isEditing, isExporting, previewImg, cardClass, inputClass, fetchRate, toggleMode, addUser, addExpense, startEdit, saveEdit, cancelEdit:()=>isEditing.value=false, generateImage, clearAll, settlements, totalSpent: computed(()=>expenses.value.reduce((s,e)=>s+e.hkd,0)), removeUser: (i)=>users.value.splice(i,1), removeExpense: (i)=>expenses.value.splice(i,1) };
     }
 }).mount('#app');
 </script>
