--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>數神 MathGod v4.5 - 銀行匯率版</title>
+    <title>數神 MathGod v4.6</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
         [v-cloak] { display: none; }
-        body { background-color: #121212; color: #e5e7eb; font-family: sans-serif; }
+        body { background-color: #121212; color: #e5e7eb; }
         .evergreen-gradient { background: linear-gradient(135deg, #059669 0%, #064e3b 100%); }
         .card-bg { background-color: #1e1e1e; border: 1px solid rgba(255,255,255,0.05); }
         .input-bg { background-color: #2d2d2d; border: 1px solid rgba(255,255,255,0.1); color: white; }
@@ -32,24 +32,6 @@
     </header>
 
     <div class="p-4 space-y-6">
-        <section class="card-bg p-4 rounded-2xl border-l-4 border-yellow-500">
-            <div class="flex justify-between items-center mb-2">
-                <h2 class="text-[10px] font-bold text-yellow-500 uppercase tracking-widest">銀行匯率校準</h2>
-                <span class="text-[10px] opacity-40">一般信用卡為 1.95%</span>
-            </div>
-            <div class="flex items-center gap-4">
-                <div class="flex-1 flex items-center gap-2">
-                    <span class="text-xs opacity-60">手續費</span>
-                    <input v-model.number="feePercent" type="number" step="0.05" class="input-bg w-20 p-1 rounded-lg text-center text-sm">
-                    <span class="text-xs opacity-60">%</span>
-                </div>
-                <div class="text-[10px] text-right">
-                    <div class="opacity-40">目前匯率 (連手續費):</div>
-                    <div class="text-yellow-500 font-mono">1 {{ form.currency }} = {{ (currentRate * (1 + feePercent/100)).toFixed(4) }} HKD</div>
-                </div>
-            </div>
-        </section>
-
         <section v-if="!isExporting" class="card-bg p-5 rounded-3xl shadow-sm">
             <h2 class="font-bold text-emerald-500 mb-4 text-xs uppercase tracking-widest">1. 加入朋友</h2>
             <div class="flex gap-2 mb-4">
@@ -68,10 +50,10 @@
                 <div class="flex justify-between items-end mb-6">
                     <div>
                         <h2 class="font-black text-emerald-500 text-xl tracking-tight">最終結算</h2>
-                        <p class="text-[10px] text-gray-500 uppercase">以銀行扣數匯率計算</p>
+                        <p class="text-[10px] text-gray-500 uppercase">Settlement</p>
                     </div>
                     <div class="text-right">
-                        <span class="text-[10px] text-gray-600 block uppercase">Total Spent</span>
+                        <span class="text-[10px] text-gray-600 block uppercase font-bold">Total</span>
                         <span class="font-mono font-bold text-emerald-500 text-lg">HK${{ totalSpent.toFixed(1) }}</span>
                     </div>
                 </div>
@@ -94,8 +76,7 @@
                         <div class="text-[10px] text-gray-500 mt-1">
                             <b class="text-emerald-600 uppercase">{{ exp.payer }}</b> 
                             付 {{ exp.currency }} {{ exp.amount }} 
-                            <span class="mx-1 opacity-30">|</span>
-                            <span>已計 {{ exp.appliedFee }}% 手續費</span>
+                            <span v-if="exp.appliedFee > 0" class="ml-1">(含 {{ exp.appliedFee }}% 匯率手續費)</span>
                         </div>
                     </div>
                     <div class="text-right flex items-center gap-4">
@@ -110,8 +91,14 @@
         </div>
 
         <section v-if="!isExporting" id="input-section" :class="isEditing ? 'border-amber-500/50 ring-1 ring-amber-500/20' : ''" class="card-bg rounded-3xl p-6 border shadow-sm transition-all">
+            <h2 class="font-bold text-gray-500 mb-5 text-[10px] uppercase tracking-widest flex justify-between">
+                <span>{{ isEditing ? '修改紀錄' : '2. 新增消費' }}</span>
+                <button v-if="isEditing" @click="cancelEdit" class="text-amber-500 font-bold underline">取消</button>
+            </h2>
+
             <div class="space-y-5">
-                <input v-model="form.item" type="text" placeholder="項目 (例如: 日本藥妝)" class="input-bg w-full p-4 rounded-2xl text-sm outline-none">
+                <input v-model="form.item" type="text" placeholder="項目 (如: 拉麵)" class="input-bg w-full p-4 rounded-2xl text-sm outline-none">
+                
                 <div class="flex gap-2">
                     <select v-model="form.currency" @change="fetchRate" class="input-bg p-4 rounded-2xl text-sm w-1/3 font-bold">
                         <option value="HKD">HKD</option><option value="JPY">JPY</option>
@@ -121,6 +108,21 @@
                     </select>
                     <input v-model.number="form.amount" type="number" placeholder="金額" class="input-bg flex-1 p-4 rounded-2xl text-sm text-right font-mono font-bold">
                 </div>
+
+                <div v-if="form.currency !== 'HKD'" class="bg-yellow-500/5 border border-yellow-500/20 p-4 rounded-2xl animate-in fade-in duration-300">
+                    <div class="flex justify-between items-center mb-2">
+                        <label class="text-[10px] font-bold text-yellow-500 uppercase tracking-widest">銀行匯率手續費</label>
+                        <span class="text-[10px] text-yellow-500/60 font-mono">1 {{ form.currency }} ≈ {{ (currentRate * (1 + feePercent/100)).toFixed(4) }} HKD</span>
+                    </div>
+                    <div class="flex items-center gap-3">
+                        <input type="range" v-model.number="feePercent" min="0" max="5" step="0.05" class="flex-1 h-1 bg-yellow-900 rounded-lg appearance-none cursor-pointer accent-yellow-500">
+                        <div class="flex items-center gap-1 min-w-[60px] justify-end">
+                            <input v-model.number="feePercent" type="number" class="bg-transparent text-yellow-500 font-bold text-sm w-10 text-right outline-none">
+                            <span class="text-xs text-yellow-500">%</span>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="grid grid-cols-2 gap-4">
                     <div class="space-y-2">
                         <label class="text-[10px] font-bold text-gray-500 ml-1">誰付款？</label>
@@ -139,7 +141,7 @@
                     </div>
                 </div>
                 <button @click="isEditing ? saveEdit() : addExpense()" :class="isEditing ? 'bg-amber-600' : 'evergreen-gradient'" class="w-full text-white font-black py-5 rounded-[20px] shadow-xl active:scale-95 transition-all text-sm uppercase tracking-widest">
-                    {{ isEditing ? '儲存修改' : '確認記帳 HK$' + (form.amount * currentRate * (1 + feePercent/100)).toFixed(1) }}
+                    {{ isEditing ? '儲存修改' : '確認記帳 HK$' + (form.amount * currentRate * (1 + (form.currency === 'HKD' ? 0 : feePercent)/100)).toFixed(1) }}
                 </button>
             </div>
         </section>
@@ -152,9 +154,8 @@
 
         <div v-if="previewImg" class="fixed inset-0 bg-black/98 z-50 flex flex-col items-center justify-center p-6" @click.self="previewImg = null">
             <img :src="previewImg" class="max-w-full max-h-[80vh] rounded-2xl shadow-2xl">
-            <button @click="previewImg = null" class="mt-8 bg-white/10 text-white px-12 py-3 rounded-full border border-white/10">返回</button>
+            <button @click="previewImg = null" class="mt-8 bg-white/10 text-white px-12 py-3 rounded-full border border-white/10">返回修改</button>
         </div>
-
     </div>
 </div>
 
@@ -184,39 +185,27 @@ createApp({
 
         const addExpense = () => {
             if (!form.value.item || !form.value.amount || !form.value.payer || form.value.involved.length === 0) return;
-            // 這裡計算最終港幣金額：金額 * 匯率 * (1 + 手續費百分比)
-            const finalHkd = form.value.amount * currentRate.value * (1 + feePercent.value / 100);
-            expenses.value.unshift({ 
-                id: Date.now(), 
-                ...form.value, 
-                hkd: finalHkd, 
-                appliedFee: feePercent.value,
-                involved: [...form.value.involved] 
-            });
+            const appliedFee = form.value.currency === 'HKD' ? 0 : feePercent.value;
+            const finalHkd = form.value.amount * currentRate.value * (1 + appliedFee / 100);
+            expenses.value.unshift({ id: Date.now(), ...form.value, hkd: finalHkd, appliedFee: appliedFee, involved: [...form.value.involved] });
             form.value.item = ""; form.value.amount = "";
         };
 
         const startEdit = (i) => { 
-            isEditing.value = true; 
-            editIndex.value = i; 
+            isEditing.value = true; editIndex.value = i; 
             form.value = { ...expenses.value[i], involved: [...expenses.value[i].involved] }; 
             feePercent.value = expenses.value[i].appliedFee || 1.95;
             fetchRate(); 
         };
 
         const saveEdit = () => {
-            const finalHkd = form.value.amount * currentRate.value * (1 + feePercent.value / 100);
-            expenses.value[editIndex.value] = { ...form.value, hkd: finalHkd, appliedFee: feePercent.value, involved: [...form.value.involved] };
+            const appliedFee = form.value.currency === 'HKD' ? 0 : feePercent.value;
+            const finalHkd = form.value.amount * currentRate.value * (1 + appliedFee / 100);
+            expenses.value[editIndex.value] = { ...form.value, hkd: finalHkd, appliedFee: appliedFee, involved: [...form.value.involved] };
             isEditing.value = false; form.value.item = ""; form.value.amount = "";
         };
 
-        const clearAll = () => {
-            if(confirm("確定要清除所有紀錄？")) {
-                expenses.value = []; users.value = [];
-                localStorage.removeItem('mathgod_v45_data');
-                location.reload();
-            }
-        };
+        const clearAll = () => { if(confirm("確定要清除所有紀錄？")) { expenses.value = []; users.value = []; localStorage.removeItem('mathgod_v46_data'); location.reload(); } };
 
         const generateImage = async () => {
             isExporting.value = true;
@@ -253,11 +242,11 @@ createApp({
         });
 
         onMounted(() => {
-            const saved = localStorage.getItem('mathgod_v45_data');
+            const saved = localStorage.getItem('mathgod_v46_data');
             if (saved) { const d = JSON.parse(saved); users.value = d.users || []; expenses.value = d.expenses || []; feePercent.value = d.feePercent || 1.95; }
         });
         watch([users, expenses, feePercent], () => {
-            localStorage.setItem('mathgod_v45_data', JSON.stringify({ users: users.value, expenses: expenses.value, feePercent: feePercent.value }));
+            localStorage.setItem('mathgod_v46_data', JSON.stringify({ users: users.value, expenses: expenses.value, feePercent: feePercent.value }));
         }, {deep: true});
 
         return { users, newUser, form, expenses, currentRate, feePercent, isEditing, isExporting, previewImg, fetchRate, addUser, addExpense, startEdit, saveEdit, cancelEdit:()=>isEditing.value=false, generateImage, clearAll, settlements, totalSpent: computed(()=>expenses.value.reduce((s,e)=>s+e.hkd,0)), removeUser: (i)=>users.value.splice(i,1), removeExpense: (i)=>expenses.value.splice(i,1) };
