--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <i class="fas fa-bolt mr-1 text-yellow-400"></i>數神
             </h1>
             <button @click="generateImage" class="bg-white/20 px-5 py-2 rounded-full border border-white/30 text-xs font-bold active:scale-95 transition-all">
-                <i class="fas fa-camera mr-1"></i> 分享結果
+                <i class="fas fa-camera mr-1"></i> Cap圖分享
             </button>
         </div>
     </header>
@@ -94,7 +94,7 @@
 
         <section v-if="!isExporting" id="input-section" class="card-bg rounded-3xl p-6 border shadow-sm transition-all">
             <div class="space-y-5">
-                <input v-model="form.item" type="text" placeholder="項目 (如: 日本拉麵)" class="input-bg w-full p-4 rounded-2xl text-sm outline-none">
+                <input v-model="form.item" type="text" placeholder="項目 (如: 咖啡)" class="input-bg w-full p-4 rounded-2xl text-sm outline-none">
                 
                 <div class="flex gap-2">
                     <select v-model="form.currency" @change="fetchRate" class="input-bg p-4 rounded-2xl text-sm w-1/3 font-bold">
