--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>數神 MathGod v5.1 - 文字分享版</title>
+    <title>數神 MathGod v5.1 </title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
@@ -30,10 +30,10 @@
             </h1>
             <div class="flex gap-2">
                 <button @click="showTextShare = true" class="bg-white/10 px-4 py-2 rounded-full border border-white/20 text-[10px] font-bold active:scale-95 transition-all">
-                    <i class="fas fa-align-left mr-1"></i> 文字
+                    <i class="fas fa-align-left mr-1"></i> 文字Share
                 </button>
                 <button @click="generateImage" class="bg-white/20 px-4 py-2 rounded-full border border-white/30 text-[10px] font-bold active:scale-95 transition-all">
-                    <i class="fas fa-camera mr-1"></i> 截圖
+                    <i class="fas fa-camera mr-1"></i> 截圖Share
                 </button>
             </div>
         </div>
