--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
         <section v-if="!isExporting" id="input-section" class="card-bg rounded-3xl p-6 border border-white/5 shadow-sm">
             <div class="space-y-5">
-                <input v-model="form.item" type="text" placeholder="項目 (如: 買香蕉)" class="input-bg w-full p-4 rounded-2xl text-sm outline-none focus:border-emerald-500/50">
+                <input v-model="form.item" type="text" placeholder="項目 (如: 日本拉麵)" class="input-bg w-full p-4 rounded-2xl text-sm outline-none focus:border-emerald-500/50">
                 
                 <div class="flex gap-2">
                     <select v-model="form.currency" @change="fetchRate" class="input-bg p-4 rounded-2xl text-sm w-1/3 font-bold outline-none">
