--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
         .tab-active { background-color: #10b981; color: white; }
         .tab-inactive { background-color: #2d2d2d; color: #6b7280; }
         .whatsapp-bg { background-color: #25D366; color: white; }
-        /* 新增：強制截圖文字顏色類別 */
-        .shot-text { color: #e5e7eb !important; }
     </style>
 </head>
 <body class="min-h-screen">
@@ -82,13 +80,13 @@
             <div v-if="expenses.length > 0" class="space-y-3">
                 <div v-for="(exp, idx) in expenses" :key="exp.id" class="card-bg p-4 rounded-2xl flex justify-between items-center border-l-4 border-emerald-600 shadow-sm relative">
                     <div class="flex-1 min-w-0 mr-4">
-                        <div class="font-black text-sm shot-text truncate">{{ exp.item }}</div>
+                        <div class="font-black text-sm text-gray-200 truncate">{{ exp.item }}</div>
                         <div class="text-[10px] text-gray-500 mt-1">
                             <b class="text-emerald-600 uppercase">{{ exp.payer }}</b> 付 {{ exp.currency }} {{ exp.amount }}
                         </div>
                     </div>
                     <div class="text-right flex items-center gap-4">
-                        <div class="font-mono font-bold shot-text">HK${{ exp.hkd.toFixed(1) }}</div>
+                        <div class="font-mono font-bold text-gray-200">HK${{ exp.hkd.toFixed(1) }}</div>
                         <div v-if="!isExporting" class="flex gap-3 opacity-20 text-xs">
                             <button @click="startEdit(idx)"><i class="fas fa-edit"></i></button>
                             <button @click="removeExpense(idx)" class="text-red-500"><i class="fas fa-trash"></i></button>
@@ -160,7 +158,7 @@
             </div>
         </div>
 
-        <div v-if="previewImg" class="fixed inset-0 bg-black/90 backdrop-blur-md z-[70] flex flex-col items-center justify-center p-6" @click.self="previewImg = null">
+        <div v-if="previewImg" class="fixed inset-0 bg-black/85 backdrop-blur-md z-[70] flex flex-col items-center justify-center p-6" @click.self="previewImg = null">
             <div class="w-full max-w-sm flex flex-col items-center">
                 <img :src="previewImg" class="max-w-full max-h-[60vh] rounded-2xl shadow-[0_20px_50px_rgba(0,0,0,0.5)] border border-white/10 mb-8">
                 
@@ -238,21 +236,10 @@ createApp({
 
         const generateImage = async () => {
             isExporting.value = true;
-            // 給予短暫延遲確保 UI 渲染完成
             setTimeout(async () => {
                 const element = document.getElementById('capture-zone');
                 try {
-                    const canvas = await html2canvas(element, { 
-                        backgroundColor: '#121212', 
-                        scale: 2,
-                        useCORS: true,
-                        // 強制渲染邏輯：在克隆出的 DOM 中把特定字體顏色鎖定
-                        onclone: (doc) => {
-                            doc.querySelectorAll('.shot-text').forEach(el => {
-                                el.style.color = '#e5e7eb';
-                            });
-                        }
-                    });
+                    const canvas = await html2canvas(element, { backgroundColor: '#121212', scale: 2 });
                     previewImg.value = canvas.toDataURL('image/png');
                 } catch (err) { alert("截圖失敗"); }
                 isExporting.value = false;
@@ -260,10 +247,10 @@ createApp({
         };
 
         const downloadImage = () => {
-            if(!previewImg.value) return;
             const link = document.createElement('a');
             const time = new Date().getTime();
-            link.download = `MathGod_Result_${time}.png`;
+            // 明確指定副檔名為 .png
+            link.download = `MathGod_Settlement_${time}.png`;
             link.href = previewImg.value;
             link.click();
         };
@@ -275,7 +262,7 @@ createApp({
                 const file = new File([blob], 'settlement.png', { type: 'image/png' });
                 if (navigator.share) {
                     await navigator.share({ files: [file], title: '數神結算單' });
-                } else { alert("瀏覽器不支援，請下載圖片"); }
+                } else { alert("瀏覽器不支援，請下載圖片或手動截圖"); }
             } catch (err) { alert("分享失敗"); }
         };
 
