--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </h1>
             <label class="flex items-center gap-2 bg-black/20 px-3 py-1.5 rounded-full border border-white/10 cursor-pointer active:scale-95 transition-all">
                 <input type="checkbox" v-model="showDetails" class="accent-emerald-400 w-4 h-4 rounded">
-                <span class="text-[10px] font-bold uppercase tracking-wide">顯示詳情</span>
+                <span class="text-[10px] font-bold uppercase tracking-wide">列出消費詳情</span>
             </label>
         </div>
         <div class="flex gap-2 justify-end">
@@ -63,7 +63,7 @@
             <section v-if="expenses.length > 0" class="bg-emerald-950/20 border border-emerald-900/40 p-6 rounded-[32px] mb-2">
                 <div class="flex justify-between items-end mb-6">
                     <div>
-                        <h2 class="font-black text-emerald-500 text-xl tracking-tight safe-render">最終結算</h2>
+                        <h2 class="font-black text-emerald-500 text-xl tracking-tight safe-render">夾錢結果</h2>
                         <p class="text-[10px] text-gray-500 -mt-2">Settlement</p>
                     </div>
                     <div class="text-right font-mono font-bold text-emerald-500 text-lg">HK${{ totalSpent.toFixed(1) }}</div>
@@ -253,7 +253,7 @@ createApp({
 
         // 修正：文字分享也受 showDetails 控制
         const shareMessage = computed(() => {
-            let msg = `⚡️ 【數神 MathGod】結算\n📊 總支出：HK$${expenses.value.reduce((s,e)=>s+e.hkd,0).toFixed(1)}\n\n✅ 找數：\n`;
+            let msg = `⚡️ 【數神 MathGod】結算\n📊 總支出：HK$${expenses.value.reduce((s,e)=>s+e.hkd,0).toFixed(1)}\n\n✅ 夾錢：\n`;
             settlements.value.forEach(s => msg += `🔹 ${s.from} ➔ ${s.to}：HK$${s.amount.toFixed(1)}\n`);
             
             if (showDetails.value && expenses.value.length > 0) {
